<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/root"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal"
              android:background="@drawable/back_img"
        >
    <LinearLayout android:id="@+id/ads"
                  xmlns:ads="http://schemas.android.com/apk/res-auto"
                  android:orientation="vertical"
                  android:layout_width="320dp"
                  android:layout_height="50dp"
                  android:layout_marginTop="5dp"
                  android:layout_marginBottom="60dp"
            >

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="left|center_vertical"
                      android:background="@drawable/board"

                >

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:paddingLeft="10dp"
                      android:paddingRight="10dp"
                      android:paddingBottom="20dp"

                >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high_score"
                        android:textSize="25sp"
                        />
                <TextView
                        android:id="@+id/high_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        />
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:paddingLeft="10dp"
                      android:paddingBottom="20dp"
                >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latest_score"
                    android:textSize="25sp"
                    />
            <TextView
                    android:id="@+id/latest_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_marginTop="50dp"
                  android:layout_marginBottom="25dp"
            >
        <TextView
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_marginBottom="70dp"
                android:text="@string/start"
                android:textColor="@color/green"
                />
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/explain"
                  android:textColor="@color/cyan"
                  android:textSize="15sp"

                />
    </LinearLayout>

</LinearLayout>

