<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center_horizontal|center_vertical"
              android:background="@drawable/back_img"
        >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_marginTop="20dp"
                  android:layout_marginBottom="40dp"
            >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:layout_marginBottom="15dp"
                android:text="@string/result"
                android:textColor="@color/green"
                android:background="@color/white"
                />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="left|center_vertical"
                      android:background="@drawable/board"

                >

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:paddingLeft="10dp"
                      android:paddingRight="10dp"
                      android:paddingBottom="20dp"

                >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear_cnt"
                        android:textSize="25sp"
                        />
                <TextView
                        android:id="@+id/clear_cnt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        />
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:paddingLeft="10dp"
                      android:paddingBottom="20dp"
                >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textSize="25sp"
                    />
            <TextView
                    android:id="@+id/score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>

